@@ -1,12 +1,7 @@
 {
-  "count": 42,
-  "uniques": 8,
+  "count": 38,
+  "uniques": 7,
   "clones": [
-    {
-      "timestamp": "2022-11-12T00:00:00Z",
-      "count": 4,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-11-13T00:00:00Z",
       "count": 2,
