@@ -1,3 +1,11 @@
+2022-11-27T01:16:00Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3556140946 # 1065
+* notice: last 14d: unq all: 7 38
+* notice: prev accum: outdated-unq outdated-all / unq all: 380 670 / 401 712
+* notice: next accum: outdated-unq outdated-all / unq all: 381 674 / 401 712
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-11-12] / []
+
 2022-11-26T16:18:05Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3554462948 # 1064
 * notice: last 14d: unq all: 8 42
